--- a/project15.html
+++ b/project15.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mini Project 15</title>
-    <style>
-      .highlight {
-        color: blue;
-        font-weight: bold;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <ul id="itemList">
@@ -24,15 +19,6 @@
 
     <button onclick="highlightEvenItems()">Ubah warna</button>
 
-    <script>
-      function highlightEvenItems() {
-        const items = document.querySelectorAll("#itemList li");
-        items.forEach((item, index) => {
-          if ((index + 1) % 2 === 0) {
-            item.classList.toggle("highlight");
-          }
-        });
-      }
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
